# TIL

./: .gitignore  README.md
Commitizen/: commitizen.md
Fast API/: Fast API.md  pytest.md
Fast API/Fast_api_demo/: README.md  database.py  main.py  models.py  myapi.db  package-lock.json  package.json  pyproject.toml
Fast API/Fast_api_demo/app/: main.py  test_main.py  test_main1.py
Fast API/Fast_api_demo/domain/answer/: answer_crud.py  answer_router.py  answer_schema.py
Fast API/Fast_api_demo/domain/question/: question_crud.py  question_router.py  question_schema.py
Fast API/Fast_api_demo/domain/user/: user_crud.py  user_router.py  user_schema.py
Fast API/Fast_api_demo/files/: myfile.txt
Fast API/Fast_api_demo/frontend/src/: App.svelte
Fast API/Fast_api_demo/frontend/src/components/: Error.svelte  Navigation.svelte
Fast API/Fast_api_demo/frontend/src/lib/: api.js
Fast API/Fast_api_demo/frontend/src/routes/: Detail.svelte  Home.svelte
Fast API/Fast_api_demo/test/: conftest.py  fixtures.py  myapi.db  test_answer.py  test_main.py  test_question.py  test_user.py
Fast API/Fast_api_demo/tests/: test_answer.py  test_user.py
Fast_api_demo/: database.py  dump.rdb  models.py  python_SQLAlchemy_쿼리문.md
Fast_api_demo/Redis/: user_login.py
Fast_api_demo/alembic/versions/: 355cf6637f85_.py  67893fb3a667_.py  b4ea00f7ccd9_.py  d88c7f44bc02_.py  f1d506b63201_.py
Fast_api_demo/app/: main copy.py  main.py
Fast_api_demo/domain/answer/: answer_crud.py  answer_schema.py
Fast_api_demo/domain/question/: question_schema.py
Fast_api_demo/domain/user/: user_router.py
Fast_api_demo/frontend/src/: main.js
Fast_api_demo/frontend/src/routes/: QuestionCreate.svelte
Fast_api_demo/tests/: conftest.py  test_question.py  test_test.py
Redis/: dump.rdb  login_fail.py  main.py  pyproject.toml
TodayError/: 230703.md  230704.md  230706.md  230710.md  230711.md  todey-error-template copy.md  todey-error-template.md
Tutorial/asyncio/news_async/: pyproject.toml
Tutorial/asyncio/start/: 2_loop_instance.py
Tutorial/asyncio/test/: async_main.py  test.py  test_async.py
Tutorial/docker/fast_api_demo/: Dockerfile  dockerfile+start.md
Tutorial/docker/fast_api_demo/backend/: pyproject.toml
Tutorial/docker/mini-test/: backend.Dockerfile
Tutorial/docker/test/: backend.Dockerfile  backend.yaml  docker-compose.yaml  dockerfile+start.md  frontend.Dockerfile  redis.Dockerfile  start-frontend.Dockerfile
Tutorial/docker/test/backend/: README.md  myapi.db  myapi.db-journal
Tutorial/docker/test/frontend/: package-lock.json
Tutorial/docker/test/redis/: user_login.py
Tutorial/k8s/: backend.yaml  frontend.yaml  re_apply.sh  redis-config.yaml  redis.Dockerfile  redis.yaml  reset.sh  setup.sh
Tutorial/k8s/backend/: alembic.ini
Tutorial/k8s/backend/Redis/: user_login.py
Tutorial/k8s/frontend/: package-lock.json
Tutorial/k8s/test/: backend-deployment.yaml  backend-service.yaml  docker-compose.yaml  frontend-deployment.yaml  frontend-service.yaml  redis-deployment.yaml  redis-service.yaml
Tutorial/mini_websocket/: pyproject.toml
Tutorial/mini_websocket/app/: main.py
Tutorial/poetry/poetry_demo/: pyproject.toml
Tutorial/pytest/: conftest.py  main.py  test_main.py
Tutorial/pytest_demo/: pyproject.toml
Tutorial/pytest_demo/tests/: conftest.py  test_all.py  test_main.py
Tutorial/redis/app/: login_fail.py  main.py
Tutorial/redis/tests/: conftest.py  test_main.py
asyncio/news_async/app/: main.py
asyncio/test/: sync_main.py
docs/: Bash_ShellScript.md  Fast API.md  FastAPI+asyncio.md  Redis-namespace.md  Redis.md  SQLAlchemy.md  WebSockets.md  asyncio.md  commitizen.md  docker-image-compare.md  docker-image.md  docker.md  kubernetes.md  minikube.md  poetry.md  poetry와 Fast API.md  pytest.md  uvicorn_vs_gunicorn.md
mini_websocket/app/: app.py  app1.py  main.py  main2.py
poetry/: peotry.md  poetry.md  poetry와 Fast API.md
poetry/poetry-demo/: pyproject.toml
poetry/poetry_demo/: pyproject.toml
(+17 files in other folders)
