[tool.poetry]
name = "redis-demo"
version = "0.1.0"
description = ""
authors = ["nahkim"]
readme = "README.md"
packages = [{include = "redis_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.5"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
