[tool.poetry]
name = "fast-api-demo"
version = "0.1.0"
description = ""
authors = ["nahkim <nahkim@huray.net>"]
readme = "README.md"
packages = [{include = "fast_api_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
